--- a/UserManagement/UserManagement.Web/user-management/src/app/components/app.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/app.component.html
@@ -1,24 +1,38 @@
-﻿<h1 id="tableLabel">Weather forecast</h1>
+﻿<h1 id="tableLabel">User Management</h1>
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading... Please refresh once the ASP.NET backend has started. See <a href="https://aka.ms/jspsintegrationangular">https://aka.ms/jspsintegrationangular</a> for more details.</em></p>
+<p *ngIf="!response">
+  <em
+    >Loading... Please refresh once the ASP.NET backend has started. See
+    <a href="https://aka.ms/jspsintegrationangular"
+      >https://aka.ms/jspsintegrationangular</a
+    >
+    for more details.</em
+  >
+</p>
 
-<table *ngIf="forecasts">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>Temp. (C)</th>
-            <th>Temp. (F)</th>
-            <th>Summary</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let forecast of forecasts">
-            <td>{{ forecast.date }}</td>
-            <td>{{ forecast.temperatureC }}</td>
-            <td>{{ forecast.temperatureF }}</td>
-            <td>{{ forecast.summary }}</td>
-        </tr>
-    </tbody>
+<table *ngIf="response">
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+      <th>Username</th>
+      <th>Password</th>
+      <th>Email</th>
+      <th>Status</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let user of response.data">
+      <td>{{ user.email }}</td>
+      <td>{{ user.lastName }}</td>
+      <td>{{ user.username }}</td>
+      <td>{{ user.password }}</td>
+      <td>{{ user.email }}</td>
+      <td>{{ user.status }}</td>
+    </tr>
+  </tbody>
 </table>
+
+<app-user-table></app-user-table>
