--- a/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.html
@@ -5,7 +5,7 @@
     (ngSubmit)="onSubmit()"
     class="text-center border border-light p-5 user-form"
   >
-    <p class="h4 mb-4 form-title">Add User</p>
+    <p class="h4 mb-4 form-title">{{ !isEdit ? "Add User" : "Edit User" }}</p>
     <!-- First name -->
     <input
       formControlName="firstName"
