Basic setup of permission components - clientApp

--- a/UserManagement/UserManagement.Web/user-management/src/app/components/app.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/app.component.html
@@ -1,3 +1,3 @@
-﻿<h1 id="tableLabel">User Management</h1>
+<h1 id="tableLabel">User Management</h1>
 
-<app-create-user></app-create-user>
+<app-user-permissions></app-user-permissions>
