--- a/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.html
@@ -4,16 +4,12 @@
       <div class="table-title">
         <div class="row">
           <div class="col-sm-5">
-            <h2>User <b>Management</b></h2>
+            <h2><b>User Management</b></h2>
           </div>
-          <div class="col-sm-7">
-            <a href="#" class="btn btn-secondary"
+          <div class="col-sm-7" (click)="navigateToAddNewUser()">
+            <a class="btn btn-secondary"
               ><i class="material-icons">&#xE147;</i>
               <span>Add New User</span></a
-            >
-            <a href="#" class="btn btn-secondary"
-              ><i class="material-icons">&#xE24D;</i>
-              <span>Export to Excel</span></a
             >
           </div>
         </div>
@@ -23,167 +19,78 @@
           <tr>
             <th>#</th>
             <th>Name</th>
-            <th>Date Created</th>
-            <th>Role</th>
+            <th>Username</th>
+            <th>Email</th>
             <th>Status</th>
             <th>Action</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
+          <tr *ngFor="let user of users">
+            <td>{{ user.id }}</td>
+            <td>{{ user.firstName }} {{ user.lastName }}</td>
+            <td>{{ user.username }}</td>
+            <td>{{ user.email }}</td>
             <td>
-              <a href="#"
-                ><img
-                  src="/examples/images/avatar/1.jpg"
-                  class="avatar"
-                  alt="Avatar"
-                />
-                Michael Holz</a
+              <span
+                class="status"
+                [ngClass]="{
+                  'text-success': user.status == status.active,
+                  'text-danger': user.status == status.inactive
+                }"
+                >&bull;</span
               >
+              {{ status[user.status] }}
             </td>
-            <td>04/10/2013</td>
-            <td>Admin</td>
-            <td><span class="status text-success">&bull;</span> Active</td>
             <td>
               <a
-                href="#"
-                class="settings"
-                title="Settings"
+                class="settings cursor-pointer"
+                title="Edit user"
                 data-toggle="tooltip"
-                ><i class="material-icons">&#xE8B8;</i></a
+                ><i (click)="navigateToEditUser(user.id)" class="material-icons"
+                  >&#xe254;</i
+                ></a
               >
-              <a href="#" class="delete" title="Delete" data-toggle="tooltip"
-                ><i class="material-icons">&#xE5C9;</i></a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>
-              <a href="#"
-                ><img
-                  src="/examples/images/avatar/2.jpg"
-                  class="avatar"
-                  alt="Avatar"
-                />
-                Paula Wilson</a
-              >
-            </td>
-            <td>05/08/2014</td>
-            <td>Publisher</td>
-            <td><span class="status text-success">&bull;</span> Active</td>
-            <td>
               <a
-                href="#"
-                class="settings"
-                title="Settings"
+                class="permission cursor-pointer"
+                title="Edit permission"
                 data-toggle="tooltip"
-                ><i class="material-icons">&#xE8B8;</i></a
+                ><i
+                  (click)="navigateToEditPermissions(user.id)"
+                  class="material-icons"
+                  >&#xe925;</i
+                ></a
               >
-              <a href="#" class="delete" title="Delete" data-toggle="tooltip"
-                ><i class="material-icons">&#xE5C9;</i></a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>
-              <a href="#"
-                ><img
-                  src="/examples/images/avatar/3.jpg"
-                  class="avatar"
-                  alt="Avatar"
-                />
-                Antonio Moreno</a
-              >
-            </td>
-            <td>11/05/2015</td>
-            <td>Publisher</td>
-            <td><span class="status text-danger">&bull;</span> Suspended</td>
-            <td>
               <a
-                href="#"
-                class="settings"
-                title="Settings"
+                class="delete cursor-pointer"
+                title="Delete"
                 data-toggle="tooltip"
-                ><i class="material-icons">&#xE8B8;</i></a
-              >
-              <a href="#" class="delete" title="Delete" data-toggle="tooltip"
-                ><i class="material-icons">&#xE5C9;</i></a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>
-              <a href="#"
-                ><img
-                  src="/examples/images/avatar/4.jpg"
-                  class="avatar"
-                  alt="Avatar"
-                />
-                Mary Saveley</a
-              >
-            </td>
-            <td>06/09/2016</td>
-            <td>Reviewer</td>
-            <td><span class="status text-success">&bull;</span> Active</td>
-            <td>
-              <a
-                href="#"
-                class="settings"
-                title="Settings"
-                data-toggle="tooltip"
-                ><i class="material-icons">&#xE8B8;</i></a
-              >
-              <a href="#" class="delete" title="Delete" data-toggle="tooltip"
-                ><i class="material-icons">&#xE5C9;</i></a
-              >
-            </td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>
-              <a href="#"
-                ><img
-                  src="/examples/images/avatar/5.jpg"
-                  class="avatar"
-                  alt="Avatar"
-                />
-                Martin Sommer</a
-              >
-            </td>
-            <td>12/08/2017</td>
-            <td>Moderator</td>
-            <td><span class="status text-warning">&bull;</span> Inactive</td>
-            <td>
-              <a
-                href="#"
-                class="settings"
-                title="Settings"
-                data-toggle="tooltip"
-                ><i class="material-icons">&#xE8B8;</i></a
-              >
-              <a href="#" class="delete" title="Delete" data-toggle="tooltip"
-                ><i class="material-icons">&#xE5C9;</i></a
+                ><i (click)="openModal(user.id)" class="material-icons"
+                  >&#xE5C9;</i
+                ></a
               >
             </td>
           </tr>
         </tbody>
       </table>
+
       <div class="clearfix">
-        <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+        <div *ngIf="pagingData" class="hint-text">
+          Showing <b> {{ pagingData.CurrentPage }} </b> out of
+          <b> {{ pagingData.TotalPages }} </b> pages
+        </div>
+
         <ul class="pagination">
-          <li class="page-item disabled"><a href="#">Previous</a></li>
-          <li class="page-item"><a href="#" class="page-link">1</a></li>
-          <li class="page-item"><a href="#" class="page-link">2</a></li>
-          <li class="page-item active"><a href="#" class="page-link">3</a></li>
-          <li class="page-item"><a href="#" class="page-link">4</a></li>
-          <li class="page-item"><a href="#" class="page-link">5</a></li>
-          <li class="page-item"><a href="#" class="page-link">Next</a></li>
+          <li *ngIf="pagingData?.HasPrevious" class="page-item">
+            <a class="page-link" (click)="onPreviousClick()">Previous</a>
+          </li>
+          <li *ngIf="pagingData?.HasNext" class="page-item">
+            <a class="page-link" (click)="onNextClick()">Next</a>
+          </li>
         </ul>
       </div>
     </div>
   </div>
 </div>
+
+<router-outlet></router-outlet>
