--- a/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.css
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.css
@@ -7,7 +7,7 @@
   background: #fff;
   padding: 20px 25px;
   border-radius: 3px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .05);
 }
 
 .table-title {
@@ -37,8 +37,7 @@
   margin-left: 10px;
 }
 
-.table-title .btn:hover,
-.table-title .btn:focus {
+.table-title .btn:hover, .table-title .btn:focus {
   color: #566787;
   background: #f2f2f2;
 }
@@ -54,8 +53,7 @@
   margin-top: 2px;
 }
 
-table.table tr th,
-table.table tr td {
+table.table tr th, table.table tr td {
   border-color: #e9e9e9;
   padding: 12px 15px;
   vertical-align: middle;
@@ -66,7 +64,7 @@ table.table tr th:first-child {
 }
 
 table.table tr th:last-child {
-  width: 100px;
+  width: 130px;
 }
 
 table.table-striped tbody tr:nth-of-type(odd) {
@@ -97,15 +95,19 @@ table.table td a {
 }
 
 table.table td a:hover {
-  color: #2196f3;
+  color: #2196F3;
 }
 
 table.table td a.settings {
-  color: #2196f3;
+  color: #2196F3;
 }
 
 table.table td a.delete {
-  color: #f44336;
+  color: #F44336;
+}
+
+table.table td a.permission {
+  color: #566787;
 }
 
 table.table td i {
@@ -135,7 +137,7 @@ table.table .avatar {
 }
 
 .text-warning {
-  color: #ffc107;
+  color: #FFC107;
 }
 
 .text-danger {
@@ -164,9 +166,8 @@ table.table .avatar {
   color: #666;
 }
 
-.pagination li.active a,
-.pagination li.active a.page-link {
-  background: #03a9f4;
+.pagination li.active a, .pagination li.active a.page-link {
+  background: #03A9F4;
 }
 
 .pagination li.active a:hover {
@@ -179,11 +180,15 @@ table.table .avatar {
 
 .pagination li i {
   font-size: 16px;
-  padding-top: 6px;
+  padding-top: 6px
 }
 
 .hint-text {
   float: left;
   margin-top: 10px;
   font-size: 13px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
