Added delete modal on UI

--- a/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.html
@@ -6,7 +6,7 @@
     class="text-center border border-light p-5 user-form"
   >
     <p class="h4 mb-4 form-title">
-      {{ userId > 0 ? "Add User" : "Edit User" }}
+      {{ userId === 0 ? "Add User" : "Edit User" }}
     </p>
     <!-- First name -->
     <input
