--- a/UserManagement/UserManagement.Web/user-management/src/app/components/confirmation-modal/confirmation-modal.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/confirmation-modal/confirmation-modal.component.html
@@ -1,1 +1,13 @@
+<div class="modal-header">
+  <h5 class="modal-title" id="exampleModalLabel">Delete user</h5>
+  <button type="button" class="btn-close" aria-label="Close"></button>
+</div>
 <div class="modal-body">Are you sure you want to delete this user?</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" (click)="onClose()">
+    Cancel
+  </button>
+  <button type="button" class="btn btn-danger" (click)="onSave()">
+    Confirm
+  </button>
+</div>
