--- a/UserManagement/UserManagement.Web/user-management/src/app/components/user-permissions/user-permissions.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/user-permissions/user-permissions.component.html
@@ -1,6 +1,7 @@
-<div class="container">
-  <h3>Permissions</h3>
-
+<div class="container permission-box">
+  <h2 class="title">
+    <b>User Permissions</b>
+  </h2>
   <div *ngIf="configuredPermissions" class="row">
     <div class="col-xl-5">
       <h4>User assigned permissions</h4>
