--- a/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.css
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/create-user/create-user.component.css
@@ -1,3 +1,20 @@
-.form-title {
+.create-edit-title {
+  margin: 5px 0 0;
+  font-size: 24px;
   color: #299BE4;
+  padding-bottom: 15px;
+  background: #299be4;
+  color: #fff;
+  padding: 16px 30px;
+  margin: -20px -25px 10px;
+  border-radius: 3px 3px 0 0;
+}
+
+.form-control {
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+button {
+  margin-top: 1%;
 }
