--- a/UserManagement/UserManagement.Web/user-management/src/app/components/user-permissions/user-permissions.component.css
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/user-permissions/user-permissions.component.css
@@ -7,5 +7,22 @@
 }
 
 table.table td a.delete {
-  color: #F44336;
+  color: #f44336;
+}
+
+.permission-box {
+  padding: 100px;
+  color: #299be4;
+}
+
+.title {
+  margin: 5px 0 0 5px;
+  font-size: 24px;
+  color: #299be4;
+  padding-bottom: 15px;
+  background: #299be4;
+  color: #fff;
+  padding: 16px 30px;
+  margin: -20px -25px 10px;
+  border-radius: 3px 3px 0 0;
 }
