--- a/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.html
+++ b/UserManagement/UserManagement.Web/user-management/src/app/components/user-table/user-table.component.html
@@ -17,11 +17,19 @@
       <table class="table table-striped table-hover">
         <thead>
           <tr>
-            <th>#</th>
-            <th>Name</th>
-            <th>Username</th>
-            <th>Email</th>
-            <th>Status</th>
+            <th class="cursor-pointer" (click)="onColHeaderClick('id')">#</th>
+            <th class="cursor-pointer" (click)="onColHeaderClick('firstName')">
+              Name
+            </th>
+            <th class="cursor-pointer" (click)="onColHeaderClick('username')">
+              Username
+            </th>
+            <th class="cursor-pointer" (click)="onColHeaderClick('email')">
+              Email
+            </th>
+            <th class="cursor-pointer" (click)="onColHeaderClick('status')">
+              Status
+            </th>
             <th>Action</th>
           </tr>
         </thead>
